cmake_minimum_required(VERSION 3.21)
project(2nd_sem_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(2nd_sem_cpp
        .cph/.2_3.cpp_a11bfc0a0bb9bc2303677ec80ccdf1f3.prob
        .cph/.4_1.cpp_be6119112da6c18662e3ab32409df6b2.prob
        .cph/.4_3.cpp_337733d8303d6b72831b0decf444a8e2.prob
        .cph/.count.cpp_ee6c92a73061cbadf203253382b45980.prob
        .cph/.function_overloading.cpp_f66502e8dca858fc3b62ea5ee0e2eab6.prob
        .cph/.prime.cpp_787ed04e6772f7dfb718139bba8d3e34.prob
        .cph/.rerence_variable.cpp_d622e5f3298768d7b0a68943b834554f.prob
        .cph/.test.cpp_c38e9ff48325f0cacb8e4b9a4c1a7f0a.prob
        .idea/.gitignore
        ".idea/2nd-sem cpp.iml"
        .idea/modules.xml
        .idea/workspace.xml
        .vscode/3_2.cpp
        .vscode/4_2.cpp
        .vscode/settings.json
        .vscode/swap.cpp
        .c
        1_1.cpp
        1_2.cpp
        1_2.exe
        1_3.cpp
        1_3.exe
        2_1.cpp
        2_2.cpp
        2_3.cpp
        3_1.cpp
        4_1.bin
        4_1.cpp
        4_1.exe
        4_3.bin
        4_3.cpp
        4_3.exe
        5_1.cpp
        binary_serarch.cpp
        calander.cpp
        calander.exe
        count.bin
        count.cpp
        function_overloading.bin
        function_overloading.cpp
        linear_serach.cpp
        max_sum_array.cpp
        prime.bin
        prime.cpp
        prime.exe
        rerence_variable.bin
        rerence_variable.cpp
        tempCodeRunnerFile.cpp
        test.bin
        test.cpp
        text.cpp
        time.cpp)
